--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,15 +3,12 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/task_manager_db
 spring.datasource.username=postgres
 spring.datasource.password=${DB_PASSWORD}
 
-spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.open-in-view=true
 spring.jpa.properties.hibernate.dialect=
 
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
-spring.flyway.out-of-order=true
-flyway.baselineOnMigrate=true
-flyway.outOfOrder=false
+spring.flyway.schemas=public
 
 jwt.secret=${JWT_SECRET_KEY}
 
